test/trivial/deitz/foo.good
foo.chpl:1: In function '__init_foo':
foo.chpl:4: error: illegal use of module 'foo'
